Bug 1370594: Beta and launch notices
- add beta and launch notices, hidden by default
- add js to show notices on first visit to new design

--- a/kuma/static/styles/includes/_vars.scss
+++ b/kuma/static/styles/includes/_vars.scss
@@ -99,6 +99,8 @@ $code-block-padding : 15px;
 $code-block-border-width : $border-width;
 $code-block-border-style : solid;
 $table-blue : #d4dde4;
+$accent-light: #83d0f2;
+$accent-dark: #216684;
 
 $text-dark : $text-color;
 $text-light : #fff;
